--- a/NewsFun/Base.lproj/Main.storyboard
+++ b/NewsFun/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="articleCellIdentifier" rowHeight="262" id="UVt-Xi-5jt">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="articleCellIdentifier" rowHeight="262" id="UVt-Xi-5jt" customClass="ArticleCell" customModule="NewsFun" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="262"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UVt-Xi-5jt" id="zRe-k3-N52">
@@ -64,6 +64,11 @@
                                         <constraint firstItem="I9A-Dz-pfY" firstAttribute="top" secondItem="zRe-k3-N52" secondAttribute="topMargin" id="yyC-hC-YR7"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="articleImageView" destination="OzS-eh-1jj" id="Ajm-1E-KCe"/>
+                                    <outlet property="categoryLabel" destination="2CB-h4-UDJ" id="Rer-Cs-lpV"/>
+                                    <outlet property="titleLabel" destination="I9A-Dz-pfY" id="94e-ML-r9A"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
