--- a/NewsFun/Base.lproj/Main.storyboard
+++ b/NewsFun/Base.lproj/Main.storyboard
@@ -78,7 +78,11 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="NewsFun" id="FL7-Qv-OD5">
                         <barButtonItem key="backBarButtonItem" title="Articles" id="bzH-Kl-eJK"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="GxG-g7-dfk"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="GxG-g7-dfk">
+                            <connections>
+                                <action selector="reloadTapped:" destination="j6B-Lz-5LG" id="4m7-Fh-JBR"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <segue destination="rKj-bA-4JC" kind="show" identifier="goToURLSegue" id="6kR-eH-JQ6"/>
